# collider-rs

./: Cargo.toml
src/: float.rs  index_rect.rs  lib.rs  tests.rs  util.rs
src/core/: collider.rs  events.rs  grid.rs  mod.rs
src/core/dur_hitbox/: mod.rs  solvers.rs
src/geom/: card.rs  vec.rs
src/geom/shape/: mod.rs  normals.rs  tests.rs
