[package]
name = "collider"
version = "0.3.1"
authors = ["Matthew Michelotti <matthew@matthewmichelotti.com>"]
description = "A library for continuous 2D collision detection for game developement"
documentation = "https://docs.rs/collider/"
homepage = "http://www.matthewmichelotti.com/projects/collider/"
repository = "https://github.com/SergiusIW/collider-rs"
readme = "README.md"
keywords = ["collision", "geometry", "continuous", "2D", "game"]
license = "Apache-2.0"

[features]
# In most cases you will just want to use the bare collider package.
default = []

# If you use this feature, then the internal state of the collider can be
# serialized and deserialized via serde.  In most cases this isn't needed, but
# should you need it, you will **really need it**.
use_serde = ["serde", "typetag"]

[dependencies]
fnv = "^1.0.3"

# Optional dependencies for supporting serde.  Most people will not need or want
# to use this capability, but for those that want to be able to freeze the state
# of the collider and reload it at some other point in the future, this will be
# extremely useful.
serde = {version = "1.0.90", features = ["derive", "rc", "std"], optional = true}
typetag = {version = "0.1.2", optional = true}
